<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_corfirmar_datos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gt.silviarossana.controldatos.CorfirmarDatos"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_confirmar"
        android:textStyle="bold"
        android:textSize="@dimen/titulo_contacto"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top">

        <ImageView
            android:id="@+id/imgNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user"/>

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_nombre"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/left"
            android:textSize="@dimen/datos_contacto"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top">

        <ImageView
            android:id="@+id/ingFechaNacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/calendar"/>

        <TextView
            android:id="@+id/tvFechaNacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_fecha"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/left"
            android:textSize="@dimen/datos_contacto"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top">

        <ImageView
            android:id="@+id/imgTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/telefono"/>

        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_telefono"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/left"
            android:textSize="@dimen/datos_contacto"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top">

        <ImageView
            android:id="@+id/imgEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/email"/>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_email"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/left"
            android:textSize="@dimen/datos_contacto"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top">

        <ImageView
            android:id="@+id/imgDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/descripcion"/>

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_descripcion"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/left"
            android:textSize="@dimen/datos_contacto"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnEditarDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/txtboton_editar"
        android:theme="@style/MiBotonRaised"
        android:onClick="btnClickEditarDatos"/>

</LinearLayout>
